namespace Dream.Models
{
    public class ProductionType 
    {
        public int Id { get; set; }

        public string? Name { get; set; }
    }
}
