namespace Dream.Models
{
    public class Mandal
    {
        public int Id { get; set; }

        public string Name { get; set; }
    }
}
